# ai-trash

./: Cargo.toml  README.md
src/: main.rs
